server/TinTin/TinTin/src/main/java/com/example/TinTin/util/error/NotFoundException.java
package com.example.TinTin.util.error;

public class NotFoundException extends RuntimeException {
    public NotFoundException(String message) {
        super(message);
    }
}
